{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 105,
  "lineage": "7100fa1d-5192-35fa-0817-ec0221193a5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001113481fb4ba0d4",
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:elastic-ip/eipalloc-001113481fb4ba0d4",
            "domain": "vpc",
            "id": "eipalloc-001113481fb4ba0d4",
            "network_border_group": "ap-northeast-1",
            "private_dns": "ip-10-253-1-156.ap-northeast-1.compute.internal",
            "public_dns": "ec2-13-158-242-108.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.158.242.108",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "netbox-nat-eip"
            },
            "tags_all": {
              "Name": "netbox-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:internet-gateway/igw-034783de38080a66e",
            "id": "igw-034783de38080a66e",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "netbox-igw"
            },
            "tags_all": {
              "Name": "netbox-igw"
            },
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001113481fb4ba0d4",
            "association_id": "eipassoc-0203a78e4141d343c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d2700414a7c70088",
            "network_interface_id": "eni-029142c4d66a0d95d",
            "private_ip": "10.253.1.135",
            "public_ip": "13.158.242.108",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02515b1d4e7475b9d",
            "tags": {
              "Name": "netbox-ngw"
            },
            "tags_all": {
              "Name": "netbox-ngw"
            },
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:route-table/rtb-0a1495cfcd007e4ec",
            "id": "rtb-0a1495cfcd007e4ec",
            "owner_id": "471112721372",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2700414a7c70088",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-ngw"
            },
            "tags_all": {
              "Name": "private-ngw"
            },
            "timeouts": null,
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "rtb-0a1495cfcd007e4ec",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:route-table/rtb-0567633612f7a1a65",
            "id": "rtb-0567633612f7a1a65",
            "owner_id": "471112721372",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034783de38080a66e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-igw"
            },
            "tags_all": {
              "Name": "public-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "rtb-0567633612f7a1a65",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0066bd22a0a3da9b7",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a1495cfcd007e4ec",
            "subnet_id": "subnet-06dcd600352fd3663"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d9c3bf5cd904c8",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a1495cfcd007e4ec",
            "subnet_id": "subnet-0f39e66c690683442"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012f605f87078ad0f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0567633612f7a1a65",
            "subnet_id": "subnet-02515b1d4e7475b9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ec6a6774749518",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0567633612f7a1a65",
            "subnet_id": "subnet-0777d774a5e4342a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group/sg-07135a2a428f717e2",
            "description": "allow internet traffic",
            "egress": [],
            "id": "sg-07135a2a428f717e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "netbox-inbound-http",
            "name_prefix": "",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sg-07135a2a428f717e2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netbox_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group/sg-075e2ad2833d4c606",
            "description": "netbox ALB + ECS + RDS + Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "netbox to ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "netbox to postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "netbox to redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6379
              }
            ],
            "id": "sg-075e2ad2833d4c606",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB to NetBox",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS internal",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6379
              }
            ],
            "name": "netbox-sg",
            "name_prefix": "",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-06dcd600352fd3663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.253.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dcd600352fd3663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-06dcd600352fd3663",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-0f39e66c690683442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.253.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f39e66c690683442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-0f39e66c690683442",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-02515b1d4e7475b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.253.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02515b1d4e7475b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-02515b1d4e7475b9d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-0777d774a5e4342a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.253.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0777d774a5e4342a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-08522c9edcf67cbfb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-0777d774a5e4342a9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netbox_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:vpc/vpc-08522c9edcf67cbfb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.253.0.0/16",
            "default_network_acl_id": "acl-0803ecb7c3197e6df",
            "default_route_table_id": "rtb-0467fb97f57bd6164",
            "default_security_group_id": "sg-0c069b53f8db1216c",
            "dhcp_options_id": "dopt-0ce610dc678606327",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08522c9edcf67cbfb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0467fb97f57bd6164",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "netbox-vpc"
            },
            "tags_all": {
              "Name": "netbox-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "vpc-08522c9edcf67cbfb",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-0c83c8fc731ec2dc4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgr-0c83c8fc731ec2dc4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-0c83c8fc731ec2dc4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-0c83c8fc731ec2dc4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-04c814c413e47b616",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "netbox to ALB",
            "from_port": 8080,
            "id": "sgr-04c814c413e47b616",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-04c814c413e47b616",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-04c814c413e47b616",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "https_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-023c92f108f28dcaa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgr-023c92f108f28dcaa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-023c92f108f28dcaa",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-023c92f108f28dcaa",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "postgres_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-04ad87e6cb1e4c847",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "netbox to postgres",
            "from_port": 5432,
            "id": "sgr-04ad87e6cb1e4c847",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-04ad87e6cb1e4c847",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-04ad87e6cb1e4c847",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "redis_6379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-07b0682f3a3b1d357",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "netbox to redis",
            "from_port": 6379,
            "id": "sgr-07b0682f3a3b1d357",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-07b0682f3a3b1d357",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-07b0682f3a3b1d357",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-09fab2df91a7b6a0d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgr-09fab2df91a7b6a0d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-07135a2a428f717e2",
            "security_group_rule_id": "sgr-09fab2df91a7b6a0d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-09fab2df91a7b6a0d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.lb_traffic",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-0811a6a380a0f2acd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB to NetBox",
            "from_port": 8080,
            "id": "sgr-0811a6a380a0f2acd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-0811a6a380a0f2acd",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-0811a6a380a0f2acd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-073cb3303862c268d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTPS internal",
            "from_port": 443,
            "id": "sgr-073cb3303862c268d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-073cb3303862c268d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-073cb3303862c268d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "postgres_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-0d6fd5f78acd8ea2f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Postgres",
            "from_port": 5432,
            "id": "sgr-0d6fd5f78acd8ea2f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-0d6fd5f78acd8ea2f",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-0d6fd5f78acd8ea2f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis_6379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-04bc88c11ac4dbb20",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Redis",
            "from_port": 6379,
            "id": "sgr-04bc88c11ac4dbb20",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075e2ad2833d4c606",
            "region": "ap-northeast-1",
            "security_group_id": "sg-075e2ad2833d4c606",
            "security_group_rule_id": "sgr-04bc88c11ac4dbb20",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-04bc88c11ac4dbb20",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox_internal",
            "aws_vpc.netbox_vpc"
          ]
        }
      ]
    }
  ]
}